--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,8 +56,8 @@
             <span class="white-text email">{{site.user_email}}</span>
           </div>
         </li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">description</i>CV</a></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">burst_mode</i>Projects</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">person_pin</i>CV</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">wb_incandescent</i>Projects</a></li>
 	<!--<li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories</a></li>-->
 	<!--<li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>-->
 	<!--<li><a class="waves-effect" href="{{site.baseurl}}/feed.xml" target="_blank"><i class="material-icons">rss_feed</i>RSS</a></li>-->
