--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,4 @@
-{% assign sorted_repos = (site.github.public_repositories) %}
+{% assign repos = (site.github.public_repositories) %}
 <div class="col s12 switch">
   <label>
     Show forked projects
@@ -6,7 +6,7 @@
     <span class="lever"></span>
   </label>
 </div>
-{% for repo in sorted_repos %}
+{% for repo in repos %}
 <div class="col s12 m6 l4" {% if repo.fork %}id="forked"{% endif %}>
   <div class="card hoverable">
     <div class="card-image waves-effect waves-block waves-light geopattern activator" data-pattern-id="{{repo.name}}">
