--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,8 +29,8 @@
     {% endif %}
     {% endfor %}
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css">
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{site.baseurl}}/feed.xml">
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="{{site.baseurl}}/sitemap.xml">
+    <!--<link rel="alternate" type="application/rss+xml" title="RSS" href="{{site.baseurl}}/feed.xml">-->
+    <!--<link rel="sitemap" type="application/xml" title="Sitemap" href="{{site.baseurl}}/sitemap.xml">-->
     {% seo title=false %}
   </head>
   <body>
