--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,9 +51,9 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <a href="{{site.github_profile}}" target="_blank"><img class="circle z-depth-2" src="{{site.baseurl}}/assets/res/user.png"></a>
+            <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
             <span class="white-text name">{{site.user}}</span>
-            <span class="white-text email">{{site.user_email}}</span>
+	    <!--<span class="white-text email">{{site.user_email}}</span>-->
           </div>
         </li>
         <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">person_pin</i>CV</a></li>
