--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,6 @@
 {% assign repos = (site.github.public_repositories) %}
 {% for repo in repos %}
-{% echo repo %}
+{{ repo|pprint }}
 <div class="col s12 m6 l4" {% if repo.fork %}id="forked"{% endif %}>
   <div class="card hoverable">
     <div class="card-image waves-effect waves-block waves-light geopattern activator" data-pattern-id="{{repo.name}}">
