--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,10 @@
   <div class="card hoverable">
     <div class="card-image waves-effect waves-block waves-light geopattern activator" data-pattern-id="{{repo.name}}">
       <i class="material-icons waves-effect waves-block waves-light">more_vert</i>
-      <a class="card-title center-align valign-wrapper" href="{{repo.html_url}}" target="_blank">{{repo.name}}</a>
+      {% if repo.homepage == "" %}
+        <a class="card-title center-align valign-wrapper" href="{{repo.html_url}}" target="_blank">{{repo.name}}</a>
+      {% else %}
+        <a class="card-title center-align valign-wrapper" href="{{repo.homepage}}" target="_blank">{{repo.name}}</a>
     </div>
     <div class="card-content valign-wrapper center-align activator">
       <span class="activator grey-text text-darken-1">{{repo.description}}</span>
