--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
         <li>
           <div class="userView">
             <div class="background"></div>
-            <a href="{{site.github_profile}}" target="_blank"><img class="circle z-depth-2" src="{{site.baseurl}}/assets/res/user.png" style="width:75%;height:100%"></a>
+            <a href="{{site.github_profile}}" target="_blank"><img class="z-depth-2" src="{{site.baseurl}}/assets/res/user.png" style="width:100%;height:100%"></a>
             <span class="white-text name">{{site.user}}</span>
 	    <!--<span class="white-text email">{{site.user_email}}</span>-->
           </div>
