--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -5,3 +5,7 @@
 <p><b>Latex:</b> <progress max="100" value="50"></progress></p>
 <p><b>XML:</b> <progress max="100" value="35"></progress></p>
 <p><b>HTML:</b> <progress max="100" value="35"></progress></p>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/python.jpg" align="left"> <progress max="100" value="75"></progress></p>
