--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -8,4 +8,5 @@
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/python.png" align="left" height="30" width="30"> <progress max="100" value="75"></progress></p>
+<p><img src="assets/res/programming-languages/shell-script.jpg" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
+<p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
