--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -8,7 +8,7 @@
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/shell-script.jpg" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
+<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
 
 <p>&nbsp;</p>
 
