--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -13,3 +13,23 @@
 <p>&nbsp;</p>
 
 <p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/R.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/mysql.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/latex.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/html.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/xml.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p>
