--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -1,16 +1,4 @@
-<p><b>Shell Script:</b> <progress max="100" value="75"></progress></p>
-<p><b>Python:</b> <progress max="100" value="75"></progress></p>
-<p><b>R:</b> <progress max="100" value="75"></progress></p>
-<p><b>MySQL:</b> <progress max="100" value="50"></progress></p>
-<p><b>Latex:</b> <progress max="100" value="50"></progress></p>
-<p><b>XML:</b> <progress max="100" value="35"></progress></p>
-<p><b>HTML:</b> <progress max="100" value="35"></progress></p>
-
-<p>&nbsp;</p>
-
-<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
-
-<p>&nbsp;</p>
+<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br>
 
 <p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
 
