--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -1,6 +1,16 @@
-<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br>
+<style>
+div.a {
+    text-indent: 0px;
+}
+</style>
 
-<p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
+<div class="a">
+	<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
+</div>
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
 
 <p>&nbsp;</p>
 
