--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -8,26 +8,24 @@ div.a {
 	<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
 </div>
 
-<p>&nbsp;</p>
-
 <p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/R.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p>
+<p><img src="assets/res/programming-languages/R.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/mysql.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p>
+<p><img src="assets/res/programming-languages/mysql.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/latex.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p>
+<p><img src="assets/res/programming-languages/latex.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/html.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p>
+<p><img src="assets/res/programming-languages/html.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/xml.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p>
+<p><img src="assets/res/programming-languages/xml.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p><br />
