--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -1,31 +1,25 @@
-<style>
-div.a {
-    text-indent: 0px;
-}
-</style>
-
-<div class="a">
-	<p><img src="assets/res/programming-languages/bash.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
-</div>
-
-<p><img src="assets/res/programming-languages/python.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
+<p><img src="assets/res/programming-languages/bash.png" align="left" height="50" width="50"> <progress max="100" value="75"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/R.png" align="left" height="100" width="100"> <progress max="100" value="75"></progress></p><br />
+<p><img src="assets/res/programming-languages/python.png" align="left" height="50" width="50"> <progress max="100" value="75"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/mysql.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p><br />
+<p><img src="assets/res/programming-languages/R.png" align="left" height="50" width="50"> <progress max="100" value="75"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/latex.png" align="left" height="100" width="100"> <progress max="100" value="50"></progress></p><br />
+<p><img src="assets/res/programming-languages/mysql.png" align="left" height="50" width="50"> <progress max="100" value="50"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/html.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p><br />
+<p><img src="assets/res/programming-languages/latex.png" align="left" height="50" width="50"> <progress max="100" value="50"></progress></p><br />
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/xml.png" align="left" height="100" width="100"> <progress max="100" value="35"></progress></p><br />
+<p><img src="assets/res/programming-languages/html.png" align="left" height="50" width="50"> <progress max="100" value="35"></progress></p><br />
+
+<p>&nbsp;</p>
+
+<p><img src="assets/res/programming-languages/xml.png" align="left" height="50" width="50"> <progress max="100" value="35"></progress></p><br />
