--- a/assets/css/coding-skills.css
+++ b/assets/css/coding-skills.css
@@ -1,7 +1,5 @@
 progress {
-  -webkit-appearance: none;
-}
-
-::-webkit-progress-inner-element {
   border: 2px solid black;
+  width: 400px;
+  height: 60px;
 }
