--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -1,3 +1,9 @@
+<style>
+p {
+    margin: 0;
+}
+</style>
+
 <p><img src="assets/res/programming-languages/bash.png" align="left" height="50" width="50" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
 
 <p><img src="assets/res/programming-languages/python.png" align="left" height="50" width="50" title="Python"> <progress max="100" value="75"></progress></p><br />
