--- a/assets/css/coding-skills.css
+++ b/assets/css/coding-skills.css
@@ -2,12 +2,18 @@ progress {
   border: 2px solid black;
   width: 250px;
   height: 30px;
-  left: 10px;
-  top: 10px;
 }
 
 progress {
   color: #4183c4;
+}
+
+progress::-webkit-progress-value {
+  background: #4183c4;
+}
+
+progress::-moz-progress-bar {
+  background: lightcolor;
 }
 
 progress::-webkit-progress-bar {
