--- a/assets/css/coding-skills.css
+++ b/assets/css/coding-skills.css
@@ -1,7 +1,7 @@
 progress {
-  border: 2px solid black;
+  border: none;
   width: 250px;
-  height: 30px;
+  height: 60px;
   position: relative;
   padding: 10px;
 }
