--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -5,6 +5,10 @@ p {
 }
 </style>
 
+<p style="color:#1e2c57; font-size:160%"><b>Programming languages</b></p>
+
+<p>&nbsp;</p>
+
 <p><img src="assets/res/programming-languages/bash.png" align="left" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
 
 <p><img src="assets/res/programming-languages/python.png" align="left" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
