--- a/_includes/header.html
+++ b/_includes/header.html
@@ -57,7 +57,7 @@
           </div>
         </li>
         <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">person_pin</i>CV</a></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/coding-skills"><i class="material-icons">code</i>Coding Skills</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/coding-skills"><i class="material-icons">code</i>Skills</a></li>
 	<li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">wb_incandescent</i>Projects</a></li>
 	<!--<li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories</a></li>-->
 	<!--<li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>-->
