--- a/_includes/coding-skills.html
+++ b/_includes/coding-skills.html
@@ -3,22 +3,39 @@ p {
     margin: 0px;
     left: 25px;
 }
+div.a {
+    text-indent: 25px;
+}
 </style>
 
 <p style="color:#1e2c57; font-size:160%"><b>Programming languages</b></p>
 
 <p>&nbsp;</p>
 
-<p><img src="assets/res/programming-languages/bash.png" align="left" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/bash.png" align="left" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
+</div>
 
-<p><img src="assets/res/programming-languages/python.png" align="left" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/python.png" align="left" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
+</div>
 
-<p><img src="assets/res/programming-languages/R.png" align="left" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/R.png" align="left" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
+</div>
 
-<p><img src="assets/res/programming-languages/mysql.png" align="left" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/mysql.png" align="left" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
+</div>
 
-<p><img src="assets/res/programming-languages/latex.png" align="left" height="35" width="35" title="Latex"> <progress max="100" value="50"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/latex.png" align="left" height="35" width="35" title="Latex"> <progress max="100" value="50"></progress></p><br />
+</div>
 
-<p><img src="assets/res/programming-languages/html.png" align="left" height="35" width="35" title="HTML"> <progress max="100" value="35"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/html.png" align="left" height="35" width="35" title="HTML"> <progress max="100" value="35"></progress></p><br />
+</div>
 
-<p><img src="assets/res/programming-languages/xml.png" align="left" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
+<div class="a">
+	<p><img src="assets/res/programming-languages/xml.png" align="left" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
+</div>
