--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,7 +3,7 @@ p {
     margin: 0px;
 }
 div.a {
-    text-indent: 100px;
+    text-indent: 50px;
 }
 </style>
 
@@ -12,7 +12,7 @@ div.a {
 <p>&nbsp;</p>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/bash.png" align="left" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
+	<p><img src="assets/res/programming-languages/bash.png" align="left" class= "image-margin" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
 </div>
 
 <div class="a">
