--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,25 +16,25 @@ div.a {
 </div>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/python.png" align="left" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
+	<p><img src="assets/res/programming-languages/python.png" align="left" class= "image-margin" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
 </div>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/R.png" align="left" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
+	<p><img src="assets/res/programming-languages/R.png" align="left" class= "image-margin" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
 </div>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/mysql.png" align="left" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
+	<p><img src="assets/res/programming-languages/mysql.png" align="left" class= "image-margin" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
 </div>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/latex.png" align="left" height="35" width="35" title="Latex"> <progress max="100" value="50"></progress></p><br />
+	<p><img src="assets/res/programming-languages/latex.png" align="left" class= "image-margin" height="35" width="35" title="Latex"> <progress max="100" value="50"></progress></p><br />
 </div>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/html.png" align="left" height="35" width="35" title="HTML"> <progress max="100" value="35"></progress></p><br />
+	<p><img src="assets/res/programming-languages/html.png" align="left" class= "image-margin" height="35" width="35" title="HTML"> <progress max="100" value="35"></progress></p><br />
 </div>
 
 <div class="a">
-	<p><img src="assets/res/programming-languages/xml.png" align="left" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
+	<p><img src="assets/res/programming-languages/xml.png" align="left" class= "image-margin" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
 </div>
