--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,6 +5,9 @@ p {
 div.a {
     text-indent: 40px;
 }
+div.b {
+    text-indent: 25px;
+}
 table {
   width:100%;
 }
@@ -16,11 +19,11 @@ th, td {
   padding: 15px;
 }
 #color-table tr:nth-child(even) {
-  background-color: #4183c4;
+  background-color: #6face8;
   text-align: left;
 }
 #color-table tr:nth-child(odd) {
- background-color: #666666;
+ background-color: #bdbcbc;
  color: white;
  text-align: left;
 }
@@ -96,3 +99,15 @@ th, td {
 </table>
 
 <p>&nbsp;</p>
+
+<p style="color:#1e2c57; font-size:160%"><b>Agile Framework</b></p>
+
+<div class="b">
+    <p style="color:#4183c4; display:inline; font-size:120%"><b>Scrum</b></p>
+</div>
+<div class="b">
+    <p style="color:#4183c4; display:inline; font-size:120%"><b>Sprints</b></p>
+</div>
+<div class="b">
+    <p style="color:#4183c4; display:inline; font-size:120%"><b>Kanban</b></p>
+</div>
