--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -24,7 +24,6 @@ th, td {
 }
 #color-table tr:nth-child(odd) {
  background-color: #bdbcbc;
- color: white;
  text-align: left;
 }
 #color-table th {
@@ -69,6 +68,8 @@ th, td {
 <p>&nbsp;</p>
 
 <p style="color:#1e2c57; font-size:160%"><b>Software</b></p>
+
+<p>&nbsp;</p>
 
 <table id="color-table">
   <tr>
