--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,6 +8,10 @@ div.a {
 div.b {
     text-indent: 25px;
 }
+div.columns {
+	column-count: 2;
+	column-width: 100px;
+}
 table {
   width:100%;
 }
@@ -37,32 +41,38 @@ th, td {
 
 <p>&nbsp;</p>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/bash.png" align="left" class= "image-margin" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
-</div>
+<div class="columns">
+	<div class="a">
+		<p><img src="assets/res/programming-languages/bash.png" align="left" class= "image-margin" height="35" width="35" title="Shell Script"> <progress max="100" value="75"></progress></p><br />
+	</div>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/python.png" align="left" class= "image-margin" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
-</div>
+	<div class="a">
+		<p><img src="assets/res/programming-languages/python.png" align="left" class= "image-margin" height="35" width="35" title="Python"> <progress max="100" value="75"></progress></p><br />
+	</div>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/R.png" align="left" class= "image-margin" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
-</div>
+	<div class="a">
+		<p><img src="assets/res/programming-languages/R.png" align="left" class= "image-margin" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
+	</div>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/mysql.png" align="left" class= "image-margin" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
-</div>
+	<div class="a">
+		<p><img src="assets/res/programming-languages/mysql.png" align="left" class= "image-margin" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
+	</div>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/latex.png" align="left" class= "image-margin" height="35" width="35" title="Latex"> <progress max="100" value="50"></progress></p><br />
-</div>
+	<div class="a">
+		<p><img src="assets/res/programming-languages/latex.png" align="left" class= "image-margin" height="35" width="35" title="Latex"> <progress max="100" value="50"></progress></p><br />
+	</div>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/html.png" align="left" class= "image-margin" height="35" width="35" title="HTML"> <progress max="100" value="35"></progress></p><br />
-</div>
+	<div class="a">
+		<p><img src="assets/res/programming-languages/xml.png" align="left" class= "image-margin" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
+	</div>
 
-<div class="a">
-	<p><img src="assets/res/programming-languages/xml.png" align="left" class= "image-margin" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
+	<div class="a">
+		<p><img src="assets/res/programming-languages/html.png" align="left" class= "image-margin" height="35" width="35" title="HTML"> <progress max="100" value="35"></progress></p><br />
+	</div>
+
+	<div class="a">
+		<p><img src="assets/res/programming-languages/css.png" align="left" class= "image-margin" height="35" width="35" title="CSS"> <progress max="100" value="35"></progress></p><br />
+	</div>
 </div>
 
 <p>&nbsp;</p>
@@ -102,6 +112,8 @@ th, td {
 <p>&nbsp;</p>
 
 <p style="color:#1e2c57; font-size:160%"><b>Agile Framework</b></p>
+
+<p>&nbsp;</p>
 
 <div class="b">
     <p style="color:#4183c4; display:inline; font-size:120%"><b>Scrum</b></p>
