--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -51,11 +51,11 @@ th, td {
 	</div>
 
 	<div class="a">
-		<p><img src="assets/res/programming-languages/R.png" align="left" class= "image-margin" height="35" width="35" title="R programming"> <progress max="100" value="75"></progress></p><br />
+		<p><img src="assets/res/programming-languages/R.png" align="left" class= "image-margin" height="35" width="40" title="R programming"> <progress max="100" value="75"></progress></p><br />
 	</div>
 
 	<div class="a">
-		<p><img src="assets/res/programming-languages/mysql.png" align="left" class= "image-margin" height="35" width="35" title="MySQL"> <progress max="100" value="50"></progress></p><br />
+		<p><img src="assets/res/programming-languages/mysql.png" align="left" class= "image-margin" height="35" width="40" title="SQL"> <progress max="100" value="50"></progress></p><br />
 	</div>
 
 	<div class="a">
@@ -63,7 +63,7 @@ th, td {
 	</div>
 
 	<div class="a">
-		<p><img src="assets/res/programming-languages/xml.png" align="left" class= "image-margin" height="35" width="35" title="XML"> <progress max="100" value="35"></progress></p><br />
+		<p><img src="assets/res/programming-languages/xml.png" align="left" class= "image-margin" height="40" width="40" title="XML"> <progress max="100" value="35"></progress></p><br />
 	</div>
 
 	<div class="a">
@@ -71,7 +71,7 @@ th, td {
 	</div>
 
 	<div class="a">
-		<p><img src="assets/res/programming-languages/css.png" align="left" class= "image-margin" height="35" width="35" title="CSS"> <progress max="100" value="35"></progress></p><br />
+		<p><img src="assets/res/programming-languages/css.png" align="left" class= "image-margin" height="40" width="40" title="CSS"> <progress max="100" value="35"></progress></p><br />
 	</div>
 </div>
 
