--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,12 +1,12 @@
 {% assign repos = (site.github.public_repositories) %}
 {% for repo in repos %}
   {% if repo.name != "cv.github.io" %}
-  {% if repo.homepage == "" %}
+  {% if repo.homepage == null %}
   <div class="col s12 m6 l4" {% if repo.fork %}id="forked"{% endif %}>
     <div class="card hoverable">
       <div class="card-image waves-effect waves-block waves-light geopattern activator" data-pattern-id="{{repo.name}}">
         <i class="material-icons waves-effect waves-block waves-light">more_vert</i>
-        <a class="card-title center-align valign-wrapper" href="{{repo.url}}" target="_blank">{{repo.name}}</a>
+        <a class="card-title center-align valign-wrapper" href="{{repo.html_url}}" target="_blank">{{repo.name}}</a>
       </div>
       <div class="card-content valign-wrapper center-align activator">
         <span class="activator grey-text text-darken-1">{{repo.description}}</span>
